defaultspigot